@@ -5,12 +5,14 @@
   functions
 - Implemented production__print function
 - Implemented grammar and grammar test
+- Implemented first set computation and first set computation test
 
 # Changed
 - Typed interfaces now include the common typed functions header for
   convenience
 - Changed fpfdata_int, fpfdata_char, and fpfdata_str function names to
   int__print, char__print and string__print
+- Renamed fpfdata_test to print_test
 
 
 0.6.1
